# polyarchos

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  buf.gen.yaml  buf.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  port.rs  swc.rs
docs/: CONTROL_AND_DATA_FLOW.md
docs/adr/: ADR-001-monorepo-structure.md  ADR-002-language-selection.md  ADR-003-proto-first-api-design.md  ADR-004-dual-server-grpc-rest.md  ADR-005-wasm-arxml-browser-bindings.md  ADR-006-rag-orchestration-library.md  ADR-007-local-llm-selection.md  ADR-008-offline-inference-architecture.md  ADR-009-frontend-state-management.md
docs/phases/: PHASE-2-core-api.md  PHASE-3-wasm-bindings.md  PHASE-4-rag-engine.md  PHASE-5-frontend.md  PHASES-OVERVIEW.md
frontend/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/__mocks__/: wasmStub.ts
frontend/src/__tests__/: ArxmlValidator.test.tsx  ComponentBrowser.test.tsx  schema.test.ts
frontend/src/api/: client.ts  schema.ts
frontend/src/components/: ErrorBoundary.tsx  LoadingSpinner.tsx  NavBar.tsx  VariantBadge.tsx
frontend/src/pages/: ApiPlayground.tsx  ArxmlValidator.tsx  ComponentBrowser.tsx  GraphExplorer.tsx  SemanticSearch.tsx
frontend/src/store/: ui.ts
frontend/src/styles/: index.css
frontend/src/wasm/: loader.ts
infra/: README.md  docker-compose.dev.yml
proto/: README.md
proto/polyarchos/core/v1/: component.proto  service.proto
proto/polyarchos/rag/v1/: service.proto
scripts/: ingest.py  pyproject.toml
services/core-api/: Cargo.toml  README.md  build.rs
services/core-api/src/: config.rs  error.rs  main.rs
services/core-api/src/grpc/: component_service.rs  mod.rs
services/core-api/src/rest/: handlers.rs  mod.rs  types.rs
services/core-api/src/store/: mod.rs
services/rag-engine/: README.md  pyproject.toml
services/rag-engine/src/rag_engine/: __init__.py  arxml_parser.py  config.py  embeddings.py  grpc_server.py  ingestion.py  llm.py  main.py  milvus_client.py  neo4j_client.py  pipeline.py
services/rag-engine/tests/: __init__.py  test_arxml_parser.py  test_ingestion.py  test_pipeline.py
tests/fixtures/: sample.arxml
wasm/: Cargo.toml  README.md
wasm/src/: arxml.rs  lib.rs  ports.rs
