[package]
name = "core-api"
version.workspace = true
edition.workspace = true
description = "polyarchos core API — gRPC (tonic) + REST (axum) gateway"

rust-version = "1.75"

[[bin]]
name = "core-api"
path = "src/main.rs"

[dependencies]
domain = { path = "../../crates/domain" }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = "3"
