[project]
name = "rag-engine"
version = "0.1.0"
description = "polyarchos RAG pipeline — Milvus ingestion, Neo4j, local LLM interface"
requires-python = ">=3.12"
dependencies = [
    "pymilvus>=2.4",
    "neo4j>=5.0",
    "fastembed>=0.3",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "pydantic>=2.0",
    "structlog>=24.0",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
